tests/snapshots/defaults__unicode_input@001.snap
---
source: tests/defaults.rs
description: "input: items [\"\"]\noptions: -q 󰬈󰬉󰬊"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  0/1                                                                        0/0"
"> 󰬈󰬉󰬊                                                                           "
cursor: (24, 6)
