tests/snapshots/defaults__unicode_input@002.snap
---
source: tests/defaults.rs
description: "input: items [\"\"]\noptions: -q 󰬈󰬉󰬊\nafter:\n  @type \"|\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  0/1                                                                        0/0"
"> 󰬈󰬉󰬊|                                                                          "
cursor: (24, 7)
