tests/snapshots/defaults__unicode_input@003.snap
---
source: tests/defaults.rs
description: "input: items [\"\"]\noptions: -q 󰬈󰬉󰬊\nafter:\n  @key Left\n  @key Left\n  @type \"|\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  0/1                                                                        0/0"
"> 󰬈󰬉|󰬊|                                                                         "
cursor: (24, 6)
